chore: Update docker-compose configuration for production, enhance package.json scripts, and refine documentation structure

--- a/docs/components/_.md
+++ b/docs/components/_.md
@@ -1,3 +1,66 @@
 # Components
 
-This section contains detailed documentation for each component available in Borg UI. Select a component from the list to view its API and examples.
+Welcome to the Borg UI Components documentation.
+
+## Component Categories
+
+### Actions
+
+- [Button](./actions/button.md) - Interactive button component with multiple variants and sizes
+- [Toggle Button](./actions/toggle-button.md) - Stateful button that toggles between active and inactive states
+- [Theme Toggle](./actions/theme-toggle.md) - Toggle switch for theme selection
+
+### Forms
+
+- [Text Input](./forms/text-input.md) - Versatile text input with validation and enhanced features
+- [Text Area](./forms/text-area.md) - Multi-line text input for longer content
+- [Checkbox](./forms/checkbox.md) - Binary selection component with indeterminate state support
+- [Radio](./forms/radio.md) - Single selection from a group of options
+- [Toggle](./forms/toggle.md) - Animated toggle switch for binary settings
+- [Dropdown](./forms/dropdown.md) - Searchable dropdown with single/multi-select support
+- [Date Picker](./forms/date-picker.md) - Comprehensive date selection with calendar interface
+- [Time Picker](./forms/time-picker.md) - Time selection with 12/24 hour formats
+
+### Layout
+
+- [Card](./layout/card.md) - Versatile container for grouping related content
+- [Grid](./layout/grid.md) - Responsive grid system for layout organization
+- [Header](./layout/header.md) - Application header component
+- [Footer](./layout/footer.md) - Application footer component
+- [Hologram Container](./layout/hologram-container.md) - Container with holographic effects
+- [Main Layout](./layout/main-layout.md) - Main application layout structure
+
+### Data Display
+
+- [Table](./data-display/table.md) - Feature-rich table with sorting, filtering, and selection
+- [Accordion](./data-display/accordion.md) - Collapsible content sections
+- [Avatar](./data-display/avatar.md) - User profile image with fallback and status indicators
+- [Badge](./data-display/badge.md) - Small status and notification indicators
+- [Chip](./data-display/chip.md) - Compact elements for tags, filters, and selections
+
+### Navigation
+
+- [Breadcrumbs](./navigation/breadcrumbs.md) - Hierarchical navigation showing user location
+- [Menu](./navigation/menu.md) - Contextual action menus with icons and grouping
+
+### Overlay
+
+- [Modal](./overlay/modal.md) - Overlay dialog for focused interactions
+- [Tooltip](./overlay/tooltip.md) - Contextual information on hover or focus
+- [Overlay](./overlay/overlay.md) - Base overlay component for building floating UIs
+
+### Background
+
+- [Warp Speed Background](./background/warp-speed-background.md) - Animated star field background effect
+
+## Usage
+
+Each component documentation includes:
+
+- Component description and use cases
+- Props API reference
+- Code examples
+- Accessibility considerations
+- Variants and customization options
+
+For detailed implementation guidelines, refer to the specific component's documentation.
