chore: Update project configuration by adding public directory to .gitignore, removing package-lock.json, and modifying Vite config for SPA support and buffer aliasing

--- a/docs/getting-started/_.md
+++ b/docs/getting-started/_.md
@@ -1,3 +1,8 @@
+---
+title: Getting Started
+order: 2
+---
+
 # Getting Started
 
 This section provides guides on how to install and configure the Borg UI component library. Select a topic from the list to learn more.
